--- a/index.html
+++ b/index.html
@@ -22,15 +22,36 @@
         </div>
     </nav>
     <div class="container">
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+        <div class="card quiz-card">
+            <img src="./assets/img/Group 5.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+                <div class="card mb-2">
+                    <div class="card-body">
+                        This is some text within a card body.
+                    </div>
+                </div>
+                <div class="card mb-2">
+                    <div class="card-body">
+                        This is some text within a card body.
+                    </div>
+                </div>
+                <div class="card mb-2">
+                    <div class="card-body">
+                        This is some text within a card body.
+                    </div>
+                </div>
+                <div class="card mb-4">
+                    <div class="card-body">
+                        This is some text within a card body.
+                    </div>
+                </div>
+                <div class="question-footer">
+                    <button class="btn btn-outline-primary">prev</button>
+                    <span> <b>1</b> von <b>5</b> Fragen</span>
+                    <button class="btn btn-outline-primary">next</button>
+                </div>
+            </div>            
         </div>
     </div>
 </body>
