--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
             <div class="card-body">
                 <h5 class="card-title" id="question">Card title</h5>
                 <div class="card quiz-answer-card mb-2">
-                    <div class="card-body" id="answer_1">
+                    <div class="card-body" id="answer_1" onclick="answer('answer_1')">
                     </div>
                 </div>
                 <div class="card quiz-answer-card mb-2">
-                    <div class="card-body" id="answer_2">
+                    <div class="card-body" id="answer_2" onclick="answer('answer_2')">
                     </div>
                 </div>
                 <div class="card quiz-answer-card mb-2">
-                    <div class="card-body" id="answer_3">
+                    <div class="card-body" id="answer_3" onclick="answer('answer_3')">
                     </div>
                 </div>
                 <div class="card quiz-answer-card mb-4">
-                    <div class="card-body" id="answer_4">
+                    <div class="card-body" id="answer_4" onclick="answer('answer_4')">
                     </div>
                 </div>
                 <div class="question-footer">
