--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <div class="container">
         <div class="card quiz-card">
             <img src="./assets/img/Group 5.png" class="card-img-top" alt="...">
-            <div class="card-body">
+            <div class="card-body d-none" id="end_screen">
+                Quiz beendet!
+            </div>
+            <div class="card-body" id="quetion_body">
                 <h5 class="card-title" id="question">Card title</h5>
                 <div class="card quiz-answer-card mb-2">
                     <div class="card-body" id="answer_1" onclick="answer('answer_1')">
@@ -45,8 +48,8 @@
                 </div>
                 <div class="question-footer">
                     <button class="btn btn-outline-primary">prev</button>
-                    <span> <b>1</b> von <b id="all-questions"></b> Fragen</span>
-                    <button class="btn btn-outline-primary">next</button>
+                    <span> <b id="question_number">1</b> von <b id="all-questions"></b> Fragen</span>
+                    <button class="btn btn-outline-primary" id="next-button" onclick="nextQuestion()" disabled>next</button>
                 </div>
             </div>            
         </div>
