--- a/index.html
+++ b/index.html
@@ -27,25 +27,14 @@
         <div class="main-container">
             <div class="quiz-nav">
                 <div class="quiz-themes">
-                    <d class="theme">
-                        <span>HTML</span>
-                        <div class="selection-container"></div>
-                    </d>
-                    <d class="theme">
-                        <span>CSS</span>
-                        <div class="selection-container"></div>
-                    </d>
-                    <d class="theme">
-                        <span>JS</span>
-                        <div class="selection-container"></div>
-                    </d>
-                    <d class="theme">
-                        <span>Java</span>
-                        <div class="selection-container"></div>
-                    </d>
+                    <div class="quiz-select-box"></div>
+                    <div class="theme">HTML</div>
+                    <div class="theme">CSS</div>
+                    <div class="theme">JS</div>
+                    <div class="theme">JAVA</div>
                 </div>
             </div>
-            <div class="card quiz-card">
+            <div class="quiz-card">
                 <div class="progress-container" id="progress_container">
                     <div class="progress-bar" id="progress_bar"></div>
                 </div>
