--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="main-container" id="main_container">
             <div class="quiz-nav">
                 <div class="quiz-themes">
-                    <div class="quiz-select-box" id="quiz_box"></div>
+                    <div class="quiz-select-box" id="quiz_box">HTML</div>
                     <div class="theme" onclick="open_theme(0)">HTML</div>
                     <div class="theme" onclick="open_theme(1)">CSS</div>
                     <div class="theme" onclick="open_theme(2)">JS</div>
