--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <main>
         <div class="main-container" id="main_container">
             <div class="quiz-nav">
+                <img src="./assets/logo/quiz.png" alt="" class="quiz-logo-nav">
                 <div class="quiz-themes">
                     <div class="quiz-select-box" id="quiz_box">HTML</div>
                     <div class="theme" onclick="open_theme(0)">HTML</div>
@@ -41,7 +42,7 @@
                 </div>
                 <div class="card-body end-screen d-none" id="end_screen">
                     <div class="circle">
-                        <img src="./assets/img/Group 5.png" alt="" class="circle-img">
+                        <img src="./assets/logo/quiz_sw.png" alt="" class="circle-img">
                         <p class="end-headline">COMPLETE<br>HTML QUIZ</p>
                         <span>YOUR SCORE <b id="amount_of_questions">10/10</b></span>
                         <div class="circle-btns">
